modified first version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(myshell)
 set(SRC_LIST
     shell.c
     prompt.c)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g")
 
 add_compile_options(-fsanitize=address)
 add_link_options(-fsanitize=address)
@@ -12,4 +12,4 @@ add_executable(shell ${SRC_LIST})
 
 target_link_libraries(shell readline)
 
-add_subdirectory(env)
+# add_subdirectory(env)
