--- a/env/CMakeLists.txt
+++ b/env/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_executable(ls ls.c)
+# add_executable(ls ls.c)
+# add_executable(xargs xargs.c)
 add_executable(cat cat.c)
 add_executable(mkdir mkdir.c)
 add_executable(rm rm.c)
@@ -8,7 +9,6 @@ add_executable(touch touch.c)
 add_executable(pwd pwd.c)
 add_executable(ps ps.c)
 add_executable(kill kill.c)
-add_executable(xargs xargs.c)
 add_executable(echo echo.c)
 add_executable(less less.c)
 add_executable(ln ln.c)
